force-app/main/default/objects/Late_Load__c/Late_Load__c.object-meta.xml
<CustomObject>
    <description>Process Improvement Reporting which contains Early Loads, Late Loads, Collapsed Loads and Health and Safety Issues.</description>
    <label>PIR</label>
    <nameField>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PIR</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>