force-app/main/default/objects/Late_Load__c/fields/Actions_Root_Cause_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Actions_Root_Cause_Accepted__c</fullName>
    <label>Actions &amp; Root Cause Accepted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>