force-app/main/default/objects/Late_Load__c/fields/Add__c.field-meta.xml
<CustomField>
    <fullName>Add__c</fullName>
    <label>Additional Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>