force-app/main/default/objects/Late_Load__c/fields/Age_of_Stock__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Stock__c</fullName>
    <label>Age of Stock</label>
    <length>10</length>
    <type>Text</type>
</CustomField>