force-app/main/default/objects/Late_Load__c/fields/Arrival__c.field-meta.xml
<CustomField>
    <fullName>Arrival__c</fullName>
    <label>Arrival</label>
    <type>Date</type>
</CustomField>