force-app/main/default/objects/Late_Load__c/fields/Banding__c.field-meta.xml
<CustomField>
    <fullName>Banding__c</fullName>
    <label>Banding</label>
    <length>25</length>
    <type>Text</type>
</CustomField>