force-app/main/default/objects/Late_Load__c/fields/Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Month__c</fullName>
    <formula>TEXT(Dispatch__r.Month__r.Calendar_Month__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Month</label>
    <type>Text</type>
</CustomField>