force-app/main/default/objects/Late_Load__c/fields/Cause__c.field-meta.xml
<CustomField>
    <fullName>Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cause_Subcategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Availability (pool report)</fullName>
            </value>
            <value>
                <fullName>Conveyor</fullName>
            </value>
            <value>
                <fullName>Crane</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>In Bound</fullName>
            </value>
            <value>
                <fullName>Incomplete Transfer</fullName>
            </value>
            <value>
                <fullName>Interface Error - External</fullName>
            </value>
            <value>
                <fullName>Interface Error - Internal</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Live load not stand trailer</fullName>
            </value>
            <value>
                <fullName>Miscommunication</fullName>
            </value>
            <value>
                <fullName>Out Bound</fullName>
            </value>
            <value>
                <fullName>Paperwork Delay</fullName>
            </value>
            <value>
                <fullName>Returned Stock not unload</fullName>
            </value>
            <value>
                <fullName>Shot Load</fullName>
            </value>
            <value>
                <fullName>Shuttle Car</fullName>
            </value>
            <value>
                <fullName>Stock not released from QT</fullName>
            </value>
            <value>
                <fullName>VOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>