force-app/main/default/objects/Late_Load__c/fields/Cause_Category__c.field-meta.xml
<CustomField>
    <fullName>Cause_Category__c</fullName>
    <label>Cause Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Admin Error</fullName>
            </value>
            <value>
                <fullName>Breakdown</fullName>
            </value>
            <value>
                <fullName>Driver Behaviour</fullName>
            </value>
            <value>
                <fullName>Driver on the back of trailer</fullName>
            </value>
            <value>
                <fullName>Elton Despatch Site Barrier</fullName>
            </value>
            <value>
                <fullName>Entrance Site Barrier</fullName>
            </value>
            <value>
                <fullName>Entry Height Barrier</fullName>
            </value>
            <value>
                <fullName>Ex Works</fullName>
            </value>
            <value>
                <fullName>GHY Site Barrier</fullName>
            </value>
            <value>
                <fullName>Human Error</fullName>
            </value>
            <value>
                <fullName>Incorrect PPE</fullName>
            </value>
            <value>
                <fullName>Internal IT Issues</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Poor Planning</fullName>
            </value>
            <value>
                <fullName>Poor Planning - Customer</fullName>
            </value>
            <value>
                <fullName>Poor Planning - Haulier</fullName>
            </value>
            <value>
                <fullName>Poor Planning - Warehouse</fullName>
            </value>
            <value>
                <fullName>Replacement of Collapsed Load</fullName>
            </value>
            <value>
                <fullName>Traffic</fullName>
            </value>
            <value>
                <fullName>AW Breakdown</fullName>
            </value>
            <value>
                <fullName>Customer Production Line Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>