force-app/main/default/objects/Late_Load__c/fields/Cause_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Cause_Subcategory__c</fullName>
    <label>Cause Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cause_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>AW Breakdown</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Conveyor</fullName>
            </value>
            <value>
                <fullName>Crane</fullName>
            </value>
            <value>
                <fullName>Customer Error</fullName>
            </value>
            <value>
                <fullName>CX Admin Error</fullName>
            </value>
            <value>
                <fullName>Driver Delay</fullName>
            </value>
            <value>
                <fullName>Driver Error</fullName>
            </value>
            <value>
                <fullName>Driver Hours</fullName>
            </value>
            <value>
                <fullName>Haulier turned away on arrival</fullName>
            </value>
            <value>
                <fullName>Interface Error</fullName>
            </value>
            <value>
                <fullName>Internal IT Issues</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Last minute change to order</fullName>
            </value>
            <value>
                <fullName>Late Collection</fullName>
            </value>
            <value>
                <fullName>Line breakdown</fullName>
            </value>
            <value>
                <fullName>Line running ahead of schedule</fullName>
            </value>
            <value>
                <fullName>Line running behind schedule</fullName>
            </value>
            <value>
                <fullName>Line stopped</fullName>
            </value>
            <value>
                <fullName>Link to original collapsed load</fullName>
            </value>
            <value>
                <fullName>Longer than expected time to unload trailer</fullName>
            </value>
            <value>
                <fullName>Miscommunication</fullName>
            </value>
            <value>
                <fullName>No Driver</fullName>
            </value>
            <value>
                <fullName>Not booked in</fullName>
            </value>
            <value>
                <fullName>Not booked in with the warehouse</fullName>
            </value>
            <value>
                <fullName>Order placed outside agreed timeline</fullName>
            </value>
            <value>
                <fullName>Paperwork Delay</fullName>
            </value>
            <value>
                <fullName>Road Closure</fullName>
            </value>
            <value>
                <fullName>Shuttle Car</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>