force-app/main/default/objects/Late_Load__c/fields/CCTV__c.field-meta.xml
<CustomField>
    <fullName>CCTV__c</fullName>
    <label>CCTV</label>
    <length>20</length>
    <type>Text</type>
</CustomField>