force-app/main/default/objects/Late_Load__c/fields/Cleared__c.field-meta.xml
<CustomField>
    <fullName>Cleared__c</fullName>
    <label>Cleared</label>
    <type>Date</type>
</CustomField>