force-app/main/default/objects/Late_Load__c/fields/Collapsed__c.field-meta.xml
<CustomField>
    <fullName>Collapsed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was the load delivered in a collapsed state?</description>
    <inlineHelpText>Was the load delivered in a collapsed state?</inlineHelpText>
    <label>Collapsed</label>
    <type>Checkbox</type>
</CustomField>