force-app/main/default/objects/Late_Load__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <formula>Drawing__r.Colour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colour</label>
    <type>Text</type>
</CustomField>