force-app/main/default/objects/Late_Load__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments/Details</label>
    <type>TextArea</type>
</CustomField>