force-app/main/default/objects/Late_Load__c/fields/Contaminated__c.field-meta.xml
<CustomField>
    <fullName>Contaminated__c</fullName>
    <label>Contaminated</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>