force-app/main/default/objects/Late_Load__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>(Early or) Late Loads</relationshipLabel>
    <relationshipName>Early_or_Late_Loads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>