force-app/main/default/objects/Late_Load__c/fields/Customer_Informed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Informed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer informed?</label>
    <type>Checkbox</type>
</CustomField>