force-app/main/default/objects/Late_Load__c/fields/Customer_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Requested_Date__c</fullName>
    <label>Customer Requested Date</label>
    <type>DateTime</type>
</CustomField>