force-app/main/default/objects/Late_Load__c/fields/Customers_lines_down__c.field-meta.xml
<CustomField>
    <fullName>Customers_lines_down__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Were the customer&apos;s production lines down?</description>
    <inlineHelpText>Were the customer&apos;s production lines down?</inlineHelpText>
    <label>Customer&apos;s lines down?</label>
    <type>Checkbox</type>
</CustomField>