force-app/main/default/objects/Late_Load__c/fields/Date_Informed__c.field-meta.xml
<CustomField>
    <fullName>Date_Informed__c</fullName>
    <description>Time when customer was informed of Late, Early or Collapsed Load</description>
    <inlineHelpText>Time when customer was informed of Late, Early or Collapsed Load</inlineHelpText>
    <label>Date Informed</label>
    <type>DateTime</type>
</CustomField>