force-app/main/default/objects/Late_Load__c/fields/Date_of_Trailer_Drop__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Trailer_Drop__c</fullName>
    <label>Date of Trailer Drop</label>
    <type>Date</type>
</CustomField>