force-app/main/default/objects/Late_Load__c/fields/Days_between_Arrival_and_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Arrival_and_Cleared__c</fullName>
    <formula>Cleared__c - Arrival__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days between Arrival and Cleared</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>