force-app/main/default/objects/Late_Load__c/fields/Days_to_Clear__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Clear__c</fullName>
    <formula>Cleared__c - Arrival__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Clear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>