force-app/main/default/objects/Late_Load__c/fields/Days_to_resolve__c.field-meta.xml
<CustomField>
    <fullName>Days_to_resolve__c</fullName>
    <formula>Date_Resolved__c - Date_of_Trailer_Drop__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>