force-app/main/default/objects/Late_Load__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Details of Collapsed Load</description>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>