force-app/main/default/objects/Late_Load__c/fields/Difference_in_Days__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_Days__c</fullName>
    <formula>New_Delivery_Date__c -  Planned_Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference in Days</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>