force-app/main/default/objects/Late_Load__c/fields/Difference_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Difference_in_Hours__c</fullName>
    <formula>IF (Difference_in_Days__c != 0, 
  TEXT(FLOOR(24*Difference_in_Days__c)) &amp; &quot;:&quot; &amp; /*returns the number of hours */
  LPAD(TEXT(ABS(ROUND( 60*( ROUND(24*Difference_in_Days__c,8) - FLOOR(ROUND(24*Difference_in_Days__c,8))), 0 ))),2,&apos;0&apos;) 
  /*returns the number of minutes */
, &apos;0:00&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Difference in Hours</label>
    <type>Text</type>
</CustomField>