force-app/main/default/objects/Late_Load__c/fields/Dispatch__c.field-meta.xml
<CustomField>
    <fullName>Dispatch__c</fullName>
    <label>Dispatch</label>
    <referenceTo>Dispatch__c</referenceTo>
    <relationshipLabel>(Early or) Late Loads</relationshipLabel>
    <relationshipName>Late_Loads</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>