force-app/main/default/objects/Late_Load__c/fields/Dispatch_Date__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date__c</fullName>
    <formula>Dispatch__r.Dispatch_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Date</label>
    <type>Date</type>
</CustomField>