force-app/main/default/objects/Late_Load__c/fields/Dispatch_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Date_Time__c</fullName>
    <formula>Dispatch__r.Dispatch_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Date/Time</label>
    <type>DateTime</type>
</CustomField>