force-app/main/default/objects/Late_Load__c/fields/Dispatch_Name__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Name__c</fullName>
    <formula>Dispatch__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dispatch Name</label>
    <type>Text</type>
</CustomField>