force-app/main/default/objects/Late_Load__c/fields/Drawing__c.field-meta.xml
<CustomField>
    <fullName>Drawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>PIR</relationshipLabel>
    <relationshipName>PIR</relationshipName>
    <type>Lookup</type>
</CustomField>