force-app/main/default/objects/Late_Load__c/fields/Encirc_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Encirc_Contact_Name__c</fullName>
    <label>Encirc Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>