force-app/main/default/objects/Late_Load__c/fields/Escalated__c.field-meta.xml
<CustomField>
    <fullName>Escalated__c</fullName>
    <label>Escalated</label>
    <length>25</length>
    <type>Text</type>
</CustomField>