force-app/main/default/objects/Late_Load__c/fields/Form_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Form_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Recieved</label>
    <type>Checkbox</type>
</CustomField>