force-app/main/default/objects/Late_Load__c/fields/Has_Shot_load_form_been_completed__c.field-meta.xml
<CustomField>
    <fullName>Has_Shot_load_form_been_completed__c</fullName>
    <label>Has Shot load form been completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>