force-app/main/default/objects/Late_Load__c/fields/Haulier__c.field-meta.xml
<CustomField>
    <fullName>Haulier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Haulier</label>
    <referenceTo>Haulier__c</referenceTo>
    <relationshipName>Early_or_Late_Loads</relationshipName>
    <type>Lookup</type>
</CustomField>