force-app/main/default/objects/Late_Load__c/fields/Have_pictures_been_sent_if_via_ferry__c.field-meta.xml
<CustomField>
    <fullName>Have_pictures_been_sent_if_via_ferry__c</fullName>
    <label>Have pictures been sent if via ferry?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>