force-app/main/default/objects/Late_Load__c/fields/Identified__c.field-meta.xml
<CustomField>
    <fullName>Identified__c</fullName>
    <label>Identified</label>
    <length>25</length>
    <type>Text</type>
</CustomField>