force-app/main/default/objects/Late_Load__c/fields/If_ferry_which_route__c.field-meta.xml
<CustomField>
    <fullName>If_ferry_which_route__c</fullName>
    <label>If ferry, which route?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>