force-app/main/default/objects/Late_Load__c/fields/If_no_additional_information_required__c.field-meta.xml
<CustomField>
    <fullName>If_no_additional_information_required__c</fullName>
    <label>If no, additional information required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>