force-app/main/default/objects/Late_Load__c/fields/Labour_hrs__c.field-meta.xml
<CustomField>
    <fullName>Labour_hrs__c</fullName>
    <label>Labour (hrs)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>