force-app/main/default/objects/Late_Load__c/fields/Loader_1__c.field-meta.xml
<CustomField>
    <fullName>Loader_1__c</fullName>
    <label>Loader 1</label>
    <length>25</length>
    <type>Text</type>
</CustomField>