force-app/main/default/objects/Late_Load__c/fields/Loader_2__c.field-meta.xml
<CustomField>
    <fullName>Loader_2__c</fullName>
    <label>Loader 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>