force-app/main/default/objects/Late_Load__c/fields/Loader_3__c.field-meta.xml
<CustomField>
    <fullName>Loader_3__c</fullName>
    <label>Loader 3</label>
    <length>25</length>
    <type>Text</type>
</CustomField>