force-app/main/default/objects/Late_Load__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Everywhere</fullName>
            </value>
            <value>
                <fullName>Front</fullName>
            </value>
            <value>
                <fullName>Middle</fullName>
            </value>
            <value>
                <fullName>Back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>