force-app/main/default/objects/Late_Load__c/fields/Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Site__c</fullName>
    <label>Manufacturing Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Derrylin</fullName>
            </value>
            <value>
                <fullName>Elton</fullName>
            </value>
            <value>
                <fullName>Bristol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>