force-app/main/default/objects/Late_Load__c/fields/Method_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Communication__c</fullName>
    <label>Method of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>