force-app/main/default/objects/Late_Load__c/fields/Month_ID__c.field-meta.xml
<CustomField>
    <fullName>Month_ID__c</fullName>
    <formula>Dispatch__r.Month__r.Unique_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month ID</label>
    <type>Text</type>
</CustomField>