force-app/main/default/objects/Late_Load__c/fields/NCR_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>NCR_Review_Date__c</fullName>
    <label>NCR Review Date</label>
    <type>Date</type>
</CustomField>