force-app/main/default/objects/Late_Load__c/fields/New_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Delivery_Date__c</fullName>
    <description>New Delivery Date resulting from Early or Late Load</description>
    <inlineHelpText>New Delivery Date resulting from Early or Late Load</inlineHelpText>
    <label>New Delivery Date</label>
    <type>DateTime</type>
</CustomField>