force-app/main/default/objects/Late_Load__c/fields/No_of_Days_on_Site__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_on_Site__c</fullName>
    <formula>Date_of_Trailer_Drop__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Days on Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>