force-app/main/default/objects/Late_Load__c/fields/Number_of_Shot_loads_by_Haulier__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shot_loads_by_Haulier__c</fullName>
    <label>Number of Shot loads by Haulier</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>