force-app/main/default/objects/Late_Load__c/fields/Number_of_shot_loads_of_this_glass__c.field-meta.xml
<CustomField>
    <fullName>Number_of_shot_loads_of_this_glass__c</fullName>
    <label>Number of shot loads of this glass</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>