force-app/main/default/objects/Late_Load__c/fields/Other_Please_Specifiy__c.field-meta.xml
<CustomField>
    <fullName>Other_Please_Specifiy__c</fullName>
    <inlineHelpText>If you&apos;ve entered &apos;Other&apos; for &apos;Who Reported this issue?&apos; - please specify.</inlineHelpText>
    <label>Other - Please Specifiy</label>
    <type>TextArea</type>
</CustomField>