force-app/main/default/objects/Late_Load__c/fields/Pack_Specification__c.field-meta.xml
<CustomField>
    <fullName>Pack_Specification__c</fullName>
    <formula>Dispatch__r.Pack_Specification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pack Specification</label>
    <type>Text</type>
</CustomField>