force-app/main/default/objects/Late_Load__c/fields/Pallet_Height__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Height__c</fullName>
    <formula>TEXT(Drawing__r.Pallet_Height__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pallet Height</label>
    <type>Text</type>
</CustomField>