force-app/main/default/objects/Late_Load__c/fields/Pallets_damaged__c.field-meta.xml
<CustomField>
    <fullName>Pallets_damaged__c</fullName>
    <label>Number of pallets damaged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>