force-app/main/default/objects/Late_Load__c/fields/Percentage_by_Haulier__c.field-meta.xml
<CustomField>
    <fullName>Percentage_by_Haulier__c</fullName>
    <label>Percentage by Haulier</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>