force-app/main/default/objects/Late_Load__c/fields/Percentage_of_Shot_loads__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Shot_loads__c</fullName>
    <label>Percentage of Shot loads</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>