force-app/main/default/objects/Late_Load__c/fields/Planned_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Delivery_Date__c</fullName>
    <formula>Dispatch__r.Planned_Delivery_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Delivery Date</label>
    <type>DateTime</type>
</CustomField>