force-app/main/default/objects/Late_Load__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Bottle__c</referenceTo>
    <relationshipLabel>(Early or) Late Loads</relationshipLabel>
    <relationshipName>Early_or_Late_Loads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>