force-app/main/default/objects/Late_Load__c/fields/Production_Line_Downtime__c.field-meta.xml
<CustomField>
    <fullName>Production_Line_Downtime__c</fullName>
    <label>Production Line Downtime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>