force-app/main/default/objects/Late_Load__c/fields/Reason_for_Delay__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Delay__c</fullName>
    <description>Reason for Late Delivery</description>
    <label>Reason for Delay</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Traffic</fullName>
            </value>
            <value>
                <fullName>Haulier - Planning</fullName>
            </value>
            <value>
                <fullName>Haulier - Breakdown</fullName>
            </value>
            <value>
                <fullName>Haulier - Driver Error</fullName>
            </value>
            <value>
                <fullName>Haulier - Driver Hours</fullName>
            </value>
            <value>
                <fullName>Encirc - Stock Availability</fullName>
            </value>
            <value>
                <fullName>Encirc - System Issues</fullName>
            </value>
            <value>
                <fullName>Encirc - Stock Issues</fullName>
            </value>
            <value>
                <fullName>Encirc - Loading Delay</fullName>
            </value>
            <value>
                <fullName>Encirc - Planning</fullName>
            </value>
            <value>
                <fullName>Customer - Planning</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Breakdown</fullName>
                <isActive>false</isActive>
                <label>Breakdown</label>
            </value>
            <value>
                <fullName>Delays at loading point</fullName>
                <isActive>false</isActive>
                <label>Delays at loading point</label>
            </value>
            <value>
                <fullName>Driver Called in Sick</fullName>
                <isActive>false</isActive>
                <label>Driver Called in Sick</label>
            </value>
            <value>
                <fullName>Driver held up at previous drop</fullName>
                <isActive>false</isActive>
                <label>Driver held up at previous drop</label>
            </value>
            <value>
                <fullName>Driver held up looking for correct address</fullName>
                <isActive>false</isActive>
                <label>Driver held up looking for correct address</label>
            </value>
            <value>
                <fullName>Driver issues</fullName>
                <isActive>false</isActive>
                <label>Driver issues</label>
            </value>
            <value>
                <fullName>Driver stuck in motorway traffic</fullName>
                <isActive>false</isActive>
                <label>Driver stuck in motorway traffic</label>
            </value>
            <value>
                <fullName>Driving Hours</fullName>
                <isActive>false</isActive>
                <label>Driving Hours</label>
            </value>
            <value>
                <fullName>External warehouse issues</fullName>
                <isActive>false</isActive>
                <label>External warehouse issues</label>
            </value>
            <value>
                <fullName>Ferry Issues</fullName>
                <isActive>false</isActive>
                <label>Ferry Issues</label>
            </value>
            <value>
                <fullName>Haulier did not book the load</fullName>
                <isActive>false</isActive>
                <label>Haulier did not book the load</label>
            </value>
            <value>
                <fullName>Haulier did not make changes to the load</fullName>
                <isActive>false</isActive>
                <label>Haulier did not make changes to the load</label>
            </value>
            <value>
                <fullName>Load involved in Traffic accident</fullName>
                <isActive>false</isActive>
                <label>Load involved in Traffic accident</label>
            </value>
            <value>
                <fullName>Mix up with load references</fullName>
                <isActive>false</isActive>
                <label>Mix up with load references</label>
            </value>
            <value>
                <fullName>Stock not released on time</fullName>
                <isActive>false</isActive>
                <label>Stock not released on time</label>
            </value>
            <value>
                <fullName>Wrong load sent in</fullName>
                <isActive>false</isActive>
                <label>Wrong load sent in</label>
            </value>
            <value>
                <fullName>Wrong type of trailer sent in</fullName>
                <isActive>false</isActive>
                <label>Wrong type of trailer sent in</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>