force-app/main/default/objects/Late_Load__c/fields/Reason_for_Early_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Early_Delivery__c</fullName>
    <label>Reason for Early Delivery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>